--- a/.docker/apache/vhost.conf
+++ b/.docker/apache/vhost.conf
@@ -7,7 +7,7 @@
  <Directory "/srv/app/public">
     Options +Indexes +FollowSymlinks
     DirectoryIndex index.php
-    AllowOverride None
+    AllowOverride All
     Require all granted
  </Directory>
 
